<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:columnCount="4"
        android:orientation="vertical"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtResult"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="top"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="right|center_horizontal"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:text="@string/nul"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnOne"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/one"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/one"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="top|left"
            android:layout_margin="2dp"
            android:contentDescription="@string/two"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/two"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="top|left"
            android:layout_margin="2dp"
            android:contentDescription="@string/three"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/three"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="top|left"
            android:layout_margin="2dp"
            android:contentDescription="@string/six"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/six"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="top|left"
            android:layout_margin="2dp"
            android:contentDescription="@string/five"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/five"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="top|left"
            android:layout_margin="2dp"
            android:contentDescription="@string/clear"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/result"
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/result"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/result"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="top|left"
            android:layout_margin="2dp"
            android:contentDescription="@string/eight"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/eight"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_margin="2dp"
            android:contentDescription="@string/four"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/four"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/seven"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/seven"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/nine"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/nine"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/division_zero"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/division_zero"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/comma"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/coma"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/coma"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/delete"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/divide"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/divide"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/divide"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/multiply"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/multiply"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/add"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp"
            android:contentDescription="@string/subtract"
            android:onClick="buttonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/subtract"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>